# week2-data-work

./: README.md  pyproject.toml  requirements.txt
data/processed/: _run_meta.json  analytics_table.parquet  orders.parquet  orders_clean.parquet  users.parquet
data/raw/: orders.csv  users.csv
notebooks/: eda.ipynb
reports/: missingness_orders.csv  revenue_by_country.csv
scripts/: day2_main.py  generate_data.py  run_day1_load.py  run_day2_clean.py  run_day3_build_analytics.py
src/bootcamp_data/: io.py  joins.py  quality.py  transforms.py
