[project]
name = "week2-data-work"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "pandas==2.3.3",
  "numpy==2.4.0",
  "requests==2.32.5",
  "rich==14.2.0",
  "typer==0.20.1",
  "plotly==6.5.0",
  "altair==6.0.0",
  "streamlit==1.52.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootcamp_data"]